# metadata-governance-toolkit

./: .env.example  .gitignore  README.md  dockerfile  pyproject.toml
.github/workflows/: ci.yml
.metadb/: metadb.sqlite  source_demo.sqlite
src/mgt/: main.py
src/mgt/api/: app.py  routes.py  schemas.py
src/mgt/core/: config.py  hashing.py  job_runner.py  logging_config.py
src/mgt/metadb/: db.py  models.py  repository.py
src/mgt/ops/: disk_monitor.py  log_cleanup.py
src/mgt/scanning/: sqlalchemy_scanner.py
src/mgt/transform/: data_dictionary.py
tests/: test_hashing.py  test_transform.py
